# LiberTEM-holo

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  azure-pipelines-data.yml  conftest.py  docs_requirements.txt  hatch_build.py  nbval_sanitize.cfg  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE
.github/workflows/: ci.yml
benchmarks/: test_bench_filters.py  test_bench_mbir_phase_recovery.py  test_bench_utils.py  test_holo_stack.py
docs/: Makefile  llg_vs_steepest_descent.tex  make.bat
docs/plans/: implicit-energy-minimizer.md
docs/source/: acknowledgments.rst  changelog.rst  conf.py  development.rst  forward_model_analysis.md  index.rst  io.rst  references-libertem_holo.bib  usage.rst
docs/source/changelog/bugfix/: poisson.rst
docs/source/changelog/features/: create_package.rst
docs/source/reference/: index.rst
docs/source/usage/: alignment.nblink  reconstruction.nblink  sim.rst
notebooks/: Alignment.ipynb  Electrostatic_phase_analysis.ipynb  Line_Mask_example.ipynb  Magnetic_phase_analysis.ipynb  OldPyramid_MBIR_clean.ipynb  Phase_shifting_paperRU1994.ipynb  PosC_alpha0_phase_mag.npy  Reconstruction.ipynb  Simple_Reconstruction_Example.ipynb  Stacking_and_Averaging.ipynb  aperture_example.ipynb  example-reconstruction.ipynb  lcurve_investigation.ipynb  mbir_and_pyramid.ipynb  mbir_real_data.ipynb  single-image-exotic-reconstruction.ipynb
notebooks/MBIR/: PosC_alpha0_phase_mip.npy  differentiable_phase_physics_smoke.ipynb  fem_vs_mbir_and_pyramid_single_image.ipynb  fem_vs_mbir_real_data_single_image.ipynb  forward_model_benchmark.ipynb  mbir_and_pyramid.ipynb  neuralmag_cube_large_hybrid_relaxation_benchmark.ipynb  neuralmag_cube_lbfgs_relaxation_benchmark.ipynb  neuralmag_cube_surface_fit.ipynb  neuralmag_cube_tower_from_mumax.ipynb  neuralmag_cube_tower_phase_recovery.ipynb  neuralmag_skyrmion_fit.ipynb  neuralmag_vortex_fit.ipynb  neuralmag_vortex_fit_llg.ipynb  neuralmag_vs_mumax_cube_verification.ipynb  tilted_forward_model_cube.ipynb
notebooks/MBIR/FEM-inversion/: 00_main_result_summary.ipynb  01_exotic_single_image_stress_tests.ipynb  CHECKLIST.md  PLAN.md  README.md  phase1_phase2_validation.ipynb
notebooks/MBIR/FEM-inversion/archive/: CHECKLIST.md  phase1_phase2_validation.ipynb  phase3_regimeA.ipynb
notebooks/MBIR/artifacts/: exotic_single_image_stress_tests.npz
notebooks/MBIR/neuralmag_cube_tower_outputs/: coarse_llg_target_uniform_y_control.json  coarse_llg_target_uniform_y_state.npz  coarse_llg_target_uniform_y_summary.json  cube_solver_target_checks.json  cube_tower_coarse_llg_true_axis_targets.npz  cube_tower_llg_final_analysis.json  cube_tower_llg_final_analysis.md  cube_tower_solver_controls_summary.json  fine_bb_vs_llg_uniform_y_control.json  phase_recovery_full.npz  phase_recovery_medium.npz  phase_recovery_mumax_axes.npz
notebooks/MBIR/vortex_3d_plots/: vortex_fit_bb_adam.vti  vortex_ground_truth_bb_adam.vti  vortex_input_bb_adam.vti
notebooks/prototypes/: stack-alignment.ipynb
packaging/: contributors.json  creators.json  zenodo-upload.json
scripts/: benchmark_phase_recovery_solvers.py  install_neuralmag.py  investigate_cube_tower_solver_controls.py  release  requirements.txt  zenodo_upload
src/libertem_holo/: __version__.py
src/libertem_holo/base/: align.py  bf.py  common.py  convenience.py  direct.py  filters.py  fine_adjust.py  generate.py  io.py  magnetic.py  mask.py  mbir.py  mbir_energy_backend.py  phase_plate.py  reconstr.py  shapes.py  unwrap.py  utils.py
src/libertem_holo/base/io/: __init__.py  reader.py  results.py
src/libertem_holo/base/mbir/: __init__.py  bootstrap.py  differentiable_anisotropy.py  energy_backend.py  equilibrium_orientation_fit.py  fixtures.py  forward.py  forward_realspace.py  inversion.py  kernel.py  lcurve.py  neuralmag_adapter.py  neuralmag_phase_recovery.py  phase_recovery_benchmark.py  physical.py  plotting.py  regularization.py  solver.py  synthetic.py  types.py  units.py
src/libertem_holo/base/phase_unwrap/: laplace.py
src/libertem_holo/base/registration/: FFTW.py  __init__.py  display.py  fftw_wisdom.pkl  save.py  stackregistration.py  utils.py
src/libertem_holo/base/unwrap/: __init__.py  laplace.py  quality.py
src/libertem_holo/udf/: __init__.py  reconstr.py
standalone-vortex-llg-demo/: .gitignore  README.md  requirements.txt
standalone-vortex-llg-demo/notebooks/: neuralmag_vortex_fit_llg.ipynb
tests/: test_base.py  test_common.py  test_differentiable_anisotropy.py  test_direct.py  test_equilibrium_orientation_fit.py  test_holography.py  test_mbir.py  test_mbir_energy_backend.py  test_mbir_neuralmag_synthetic.py  test_mbir_phase1_forward_wrapper.py  test_mbir_synthetic.py  test_mbir_unxt.py  test_neuralmag_adapter.py  test_neuralmag_phase_recovery.py  test_regime_a_smoke.py  test_smoke.py  test_udf.py  test_unxt_spike.py
tests/base/: test_base.py  test_base_align.py  test_base_convenience.py  test_base_io.py  test_base_io_results.py  test_base_utils.py  test_filters.py  test_inversion_backends.py  test_inversion_experiments.py  test_inversion_metrics.py  test_inversion_plotting.py  test_io.py  test_magnetic.py  test_mbir.py  test_phase_plate.py  test_unwrap.py
tests/data/: test_base_convenience.py  test_io.py  test_reconstruct.py
tests/test_mbir_data/: kernel_ref.npz  phasemapper_jac_ref.npz  phasemapper_ref.npz  projector_ref.npz  vortex_disc_32_ku0.npz  vortex_disc_64_ku0.npz
tests/test_mbir_data/upstream/analytic/: ref_phase_disc.npy  ref_phase_slab.npy  ref_phase_sphere.npy  ref_phase_vort.npy
tests/test_mbir_data/upstream/forwardmodel/: jac.npy  phasemap_ref.hdf5
tests/test_mbir_data/upstream/kernel/: ref_u.npy  ref_u_fft.npy  ref_v.npy  ref_v_fft.npy
tests/test_mbir_data/upstream/phasemapper/: jac.npy  mag_proj.hdf5  phasemap.hdf5
tests/test_mbir_data/upstream/projector/: jac_x.npy  jac_y.npy  jac_z.npy  ref_mag_proj_x.hdf5  ref_mag_proj_y.hdf5  ref_mag_proj_z.hdf5  ref_magdata.hdf5
(+6 files in other folders)
